[gd_scene load_steps=2 format=3 uid="uid://cwrnavcd1ypx6"]

[ext_resource type="Script" uid="uid://bbdngh68ausr1" path="res://UI/main_menu.gd" id="1_6iuai"]

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_6iuai")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Easy Button" type="Button" parent="."]
offset_left = -147.0
offset_top = 64.0
offset_right = 148.0
offset_bottom = 149.0
theme_override_font_sizes/font_size = 32
text = "Easy
"

[node name="Medium Button" type="Button" parent="."]
offset_left = -147.0
offset_top = -39.0
offset_right = 148.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 32
text = "Medium"

[node name="Hard Button" type="Button" parent="."]
offset_left = -146.0
offset_top = -134.0
offset_right = 149.0
offset_bottom = -49.0
theme_override_font_sizes/font_size = 32
text = "Hard"

[connection signal="pressed" from="Easy Button" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="Medium Button" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="Hard Button" to="." method="_on_hard_button_pressed"]
